# email-agent

./: .env.example  .gitignore  gmail_auth.py  hello_claude.py  pyproject.toml  requirements.txt
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/: types.ts
frontend/src/app/: globals.css  landing.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/app/onboarding/: page.tsx
frontend/src/app/app/profile/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthProvider.tsx  Calendar.tsx  Charts.tsx  DayModal.tsx  DigestView.tsx  EmailCard.tsx  EmailDetail.tsx  EmailList.tsx  EmailListItem.tsx  Header.tsx  Rail.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/src/lib/: config.ts  motion.ts
scripts/: run_summarizer.py
src/email_agent/: api.py  auth.py  categorizer.py  config.py  crypto.py  db.py  gmail_client.py  llm.py  personas.py  prompts.py  summarizer.py
tests/: conftest.py  test_auth.py  test_isolation.py
